syntax = "proto3";
package yatsdb;

option go_package = "streamstorepb";

import "gogoproto/gogo.proto";


message Entry{
    uint64 stream_id = 1 [(gogoproto.customtype) = "StreamID" ,(gogoproto.nullable) = false];
    bytes data = 2 ;
    //wal ID
    uint64 ID = 3;
}

message EntryBatch{
    repeated Entry entries = 1 [(gogoproto.nullable) = false];
}

message StreamOffset {
    uint64 stream_id = 1 [(gogoproto.customtype) = "StreamID" ,(gogoproto.nullable) = false];
    int64 from = 2;
    int64 to = 3;
    int64 offset = 4;
}

message SegmentHead {
    int64 CreateTS  =1;
    map<uint64,StreamOffset> streamOffsets  =2[(gogoproto.nullable) = false];
}